syntax = "proto3";

option csharp_namespace = "GrpcSamples";

package greet;

service FooService {
  rpc GetFoo (FooRequest) returns (FooResponse);
}

message FooRequest {
  string message = 1;
}

message FooResponse {
  string message = 1;
}
